@@ -32,6 +32,7 @@ cmake (2.8.4-1) UNRELEASED; urgency=low
     - TARGET_VERSION;
     - TARGET_SOVERSION;
     - BUILD_DOXYGEN.
+  * Support parallel building at bootstrap phase.
 
  -- Kai Wasserbäch <debian@carbon-project.org>  Sun, 16 Jan 2011 11:40:34 +0100
 
